@@ -4,6 +4,10 @@
 
   02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-client-2.2.9999.ebuild:
+  Add calculate-lib depend to live ebuild.
+
+  02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-client-2.2.9999.ebuild:
   Fix executing install/unistall command.
 
 *calculate-client-2.2.9999 (01 Jun 2010)
